Adding question 6 solved and tested

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./Question_6_1/palindrome.js"></script>
+    <h1>Question 6-1</h1>
+    <h2 id="palindrome"></h2>
+
+    <h1>Question 6-2</h1>
+    <h2 id="missing"></h2>
+
+    <h1>Question 6-3</h1>
+    <h2 id="clock"></h2>
+
+    <script src="./question_6_1/palindrome.js"></script>
+    <script src="./question_6_2/find_missing_number.js"></script>
+    <script src="./question_6_3/digital_clock.js"></script>
   </body>
 </html>
